vlib/v/checker/tests/expression_should_return_an_option.out
vlib/v/checker/tests/expression_should_return_an_option.vv:29:10: error: expression should either return an Option or a Result
   27 |     }
   28 |     // should be an checker error:
   29 |     if x := return_string() {
      |             ~~~~~~~~~~~~~~~
   30 |         println('x: ${x}')
   31 |     }
